fix text alignment

--- a/src/ClientApp/src/app/general-info/general-info.component.scss
+++ b/src/ClientApp/src/app/general-info/general-info.component.scss
@@ -3,7 +3,6 @@
   min-height: 300px;
   display: flex;
   align-items: center;
-  text-align: center;
 
   p {
     color: white;
